--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
     <application
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/random_student_icon"
         android:label="Random Student"
         android:supportsRtl="true"
         android:theme="@style/AppThemeWithActionBar">
